# rin

./: .gitignore  AGENTS.md  CMakeLists.txt  Rendering.md  aerox.sln  build_native.py  copy_s.py  d.frag  external.cmake  f.html  old.t  reflect.ps1  reflected.json  rin.sln  test.json  test.vert  utils.cmake  vengine.bmfc
.old/: ReadMe.md  Taskfile.yml  build.cmake  rin.sln
.old/Rin.Framework.Graphics.Vulkan.NativeLibs/native/: CMakeLists.txt
.old/Rin.Framework.Graphics.Vulkan.NativeLibs/native/src/: graphics.cpp  graphics.hpp  macro.hpp
.old/Rin.Framework.NativeLibs/native/: CMakeLists.txt  conanfile.py
.old/Rin.Framework.NativeLibs/native/src/: platform.cpp  platform.hpp  video.cpp
AudioPlayer/: AudioPlayer.csproj  SAudioPlayer.cs
ChatApp/: ChatApp.csproj  Program.cs
NodeGraphTest/: ColorPickerPinView.cs  DefaultPinConnectionRequest.cs  GraphLayout.cs  GraphNodeLayout.cs  GraphNodeSlot.cs  GraphNodeTestView.cs  GraphSlot.cs  GraphView.cs  IGraphNodeView.cs  IGraphPinView.cs  IGraphView.cs  INodeFactory.cs  MainApplication.cs  NodeGraphConstants.cs  NodeGraphTest.csproj  PinConnectAttemptEvent.cs  PinTestView.cs  PinType.cs  Program.cs  SpacerView.cs  TextPinView.cs
NotoSans/: NotoSans.fnt
Provide/: DefaultProvider.cs  IProvider.cs
Provide.Tests/: EmailService.cs  FileService.cs  IEmailService.cs  IFileService.cs  Program.cs  Provide.Tests.csproj
RLTest/: Program.cs  RLTest.csproj
Rin.Assets/: Rin.Assets.csproj  Rin.Assets.sln  RinAssets.cs
Rin.Engine/: Atomic.cs  (+43 more)
Rin.Engine/native/: .gitignore  CMakeLists.txt  CMakePresets.json  FindDecor.cmake  FindWayland.cmake  conanfile.py  utils.cmake
Rin.Engine/native/scripts/: setup.ps1  setup.sh  setup_dev.ps1
Rin.Engine/native/src/: flags.hpp  graphics.cpp  graphics.hpp  macro.hpp  math.hpp  memory.cpp  memory.hpp  platform.cpp  platform.hpp  sdf.cpp  sdf.hpp  slang.cpp  slang.hpp  structs.hpp  video.cpp  video.hpp
Rin.Engine/native/test/: main.cpp
aerox.Runtime.Graphics/Native/: CMakeLists.txt
aerox.Runtime.Graphics/Native/src/: graphics.cpp  graphics.hpp
main/: CMakeLists.txt
main/src/: TestModule.cpp  TestModule.gen.cpp  TestModule.gen.hpp  TestModule.hpp  WText.cpp  WText.hpp  main.cpp
modules/graphics/: CMakeLists.txt
modules/graphics/include/aerox/graphics/: Allocator.hpp  BoundTexture.hpp  DeviceBuffer.hpp  DeviceImage.hpp  Frame.hpp  GraphicsModule.hpp  ImageBarrierOptions.hpp  ResourceManager.hpp  SamplerSpec.hpp  TextureHandle.hpp  TextureManager.hpp  WindowRenderer.hpp  commandBufferUtils.hpp
modules/graphics/include/aerox/graphics/descriptors/: DescriptorAllocator.hpp  DescriptorLayoutBuilder.hpp  DescriptorLayoutStore.hpp  DescriptorPool.hpp  DescriptorSet.hpp  PoolSizeRatio.hpp
modules/graphics/include/aerox/graphics/shaders/: CompiledShader.hpp  GraphicsShader.hpp  Shader.hpp  ShaderCompileError.hpp  ShaderManager.hpp  ShaderResource.hpp
modules/graphics/include/rin/graphics/: Allocator.hpp  BoundTexture.hpp  CImg.hpp  CImgPlugin.hpp  DeviceBuffer.hpp  DeviceImage.hpp  Frame.hpp  GraphicsModule.hpp  Image.hpp  ImageBarrierOptions.hpp  ImageFormat.hpp  ResourceManager.hpp  SamplerSpec.hpp  TextureHandle.hpp  WindowRenderer.hpp  commandBufferUtils.hpp
modules/graphics/include/rin/graphics/descriptors/: DescriptorAllocator.hpp  DescriptorLayoutBuilder.hpp  DescriptorLayoutStore.hpp  DescriptorPool.hpp  DescriptorSet.hpp  PoolSizeRatio.hpp
modules/graphics/include/rin/graphics/shaders/: CompiledShader.hpp  GraphicsShader.hpp  Shader.hpp  ShaderCompileError.hpp  ShaderManager.hpp  ShaderResource.hpp
modules/graphics/lib/aerox/graphics/: Allocator.cpp  BoundTexture.cpp  DeviceBuffer.cpp  DeviceImage.cpp  Frame.cpp  GraphicsModule.cpp  ImageBarrierOptions.cpp  ResourceManager.cpp  SamplerSpec.cpp  TextureHandle.cpp  TextureManager.cpp  WindowRenderer.cpp  commandBufferUtils.cpp
modules/graphics/lib/aerox/graphics/descriptors/: DescriptorAllocator.cpp  DescriptorLayoutBuilder.cpp  DescriptorLayoutStore.cpp  DescriptorPool.cpp  DescriptorSet.cpp  PoolSizeRatio.cpp
modules/graphics/lib/aerox/graphics/shaders/: GraphicsShader.cpp  Shader.cpp  ShaderCompileError.cpp  ShaderManager.cpp  ShaderResource.cpp
modules/graphics/lib/rin/graphics/: Allocator.cpp  BoundTexture.cpp  DeviceBuffer.cpp  DeviceImage.cpp  Frame.cpp  GraphicsModule.cpp  Image.cpp  ImageBarrierOptions.cpp  ResourceManager.cpp  SamplerSpec.cpp  WindowRenderer.cpp  commandBufferUtils.cpp
modules/graphics/lib/rin/graphics/descriptors/: DescriptorAllocator.cpp  DescriptorLayoutBuilder.cpp  DescriptorLayoutStore.cpp  DescriptorPool.cpp  DescriptorSet.cpp  PoolSizeRatio.cpp
modules/graphics/lib/rin/graphics/shaders/: GraphicsShader.cpp  Shader.cpp  ShaderCompileError.cpp  ShaderManager.cpp  ShaderResource.cpp
modules/graphics/resources/shaders/: global.ash  global.rsl
native/: CMakeLists.txt  build.ps1  utils.cmake
native/src/: graphics.cpp  graphics.hpp  msdf.cpp  msdf.hpp  window.cpp  window.hpp
old/aerox.Font/Native/: CMakeLists.txt
old/aerox.Font/Native/src/: msdf.cpp  msdf.hpp
old/rin.Framework/Native/: CMakeLists.txt  utils.cmake
old/rin.Framework/Native/src/: macro.hpp
old/rin.SDF/Native/: CMakeLists.txt
old/rin.SDF/Native/src/: sdf.cpp
rin.Core/Native/: CMakeLists.txt  utils.cmake
rin.Core/Native/src/: math.cpp
rin.Framework/native/: CMakeLists.txt  FindSlang.cmake  utils.cmake
rin.Framework/native/src/: graphics.cpp  graphics.hpp  math.cpp  slang.cpp
rin.Graphics/Native/: CMakeLists.txt  slang.txt  utils.cmake
rin.Graphics/Native/src/: graphics.cpp  graphics.hpp  macro.hpp
standalone/: CMakeLists.txt
standalone/src/: LightArray.cpp  LightArray.hpp  Test.cpp  Test.gen.cpp  Test.gen.hpp  Test.hpp  TestWidget.cpp  TestWidget.hpp  main.cpp
test/: CMakeLists.txt  CmakeLists.txt  Test.cpp  Test.hpp  Test.reflect.hpp  main.cpp
test/src/: Managed.hpp  TArray.hpp  TCContainer.hpp  TContainer.hpp  TFlags.hpp  TSet.hpp  Test.cpp  Test.hpp  Test.reflect.hpp  main.cpp
ui_test/: CMakeLists.txt
ui_test/src/: MainScene.cpp  MainScene.hpp  RootPanel.cpp  RootPanel.hpp  main.cpp
(+4877 files in other folders)
