cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
include(${CMAKE_CURRENT_LIST_DIR}/../../shared/cmake/utils.cmake)
SetDefaults("aerox" "graphics")

project(${MODULE_NAME} VERSION "1.0.0" DESCRIPTION "The graphics lib for aerox")

SetupProject()
AddModuleToModule(${CMAKE_CURRENT_LIST_DIR}/../window "aerox_window")
find_package(Vulkan REQUIRED)
target_link_libraries(${PROJECT_NAME} PUBLIC Vulkan::Vulkan)
#GetGlfw(3.4)
#GetGlfw(3.4)
GetVulkanMemoryAllocator("master")
GetVkBootstrap("v1.3.277")
GetAshl("main")
GetGLSL("14.3.0")
#SetDynamicLibraryDir(${PROJECT_NAME})
